deployments/development/service.yml
apiVersion: v1
kind: Service
metadata:
  name: justice-redact-frontend
  namespace: ${NAMESPACE}
spec:
  selector:
    app: justice-redact-frontend
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
